--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Smoking Rentals</string>
+    <string name="map_key" translatable="false">AIzaSyC8FDHm097mbzME33d0tOMmTHv9pp1TZNY</string>
 </resources>
